--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,11 @@ dependencies:
   # JSON Serialization
   json_annotation: ^4.8.1
 
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
